# solo-interview

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: test.yml
be/: .gitignore  README.md  data.db.wal  main.py  pyproject.toml  pytest.ini  stress.py
be/tests/: conftest.py  test_background_tasks.py  test_database.py  test_endpoints.py
fe/: README.md  fresh.config.ts  fresh.gen.ts  package.json
fe/islands/: AggregatedData.tsx  BatchCreate.tsx  BatchDelete.tsx  Events.tsx  OverallData.tsx
fe/routes/: _app.tsx  index.tsx
fe/routes/batch/: [id].tsx
fe/src/: App.tsx
fe/static/: styles.css
