[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["2pac <tarasyaremabcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
duckdb = "^1.1.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
