[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["2pac <tarasyaremabcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
duckdb = "^1.1.3"
asyncio = "^3.4.3"
aiosqlite = {version = "^0.20.0", python = "^3.11"}
pytest-asyncio = {version = "^0.24.0", python = "^3.11"}
pytest-cov = {version = "^6.0.0", python = "^3.11"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
